--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,20 +124,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0 -- /Users/huaifeng/opt/anaconda3/envs/mlsys_homework/bin/python\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 90 items / 86 deselected / 4 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py::test_init_kaiming_uniform \u001b[32mPASSED\u001b[0m\u001b[32m             [ 25%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_init_kaiming_normal \u001b[32mPASSED\u001b[0m\u001b[32m              [ 50%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_init_xavier_uniform \u001b[32mPASSED\u001b[0m\u001b[32m              [ 75%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_init_xavier_normal \u001b[32mPASSED\u001b[0m\u001b[32m               [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m4 passed\u001b[0m, \u001b[33m86 deselected\u001b[0m\u001b[32m in 0.18s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m pytest -v -k \"test_init\""
+    "!python -m pytest -v -k \"test_init\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "submit\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 18 items / 17 deselected / 1 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py \n",
+      "Submitting init...\n",
+      "Grader test 1 passed\n",
+      "Grader test 2 passed\n",
+      "Grader test 3 passed\n",
+      "Grader test 4 passed\n",
+      "\u001b[32m.\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m17 deselected\u001b[0m\u001b[32m in 2.34s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"init\" -s"
+    "!python -m mugrade submit '_Oo1E5jrsROcSyO0QctSs' -k \"init\" -s"
    ]
   },
   {
@@ -170,20 +213,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0 -- /Users/huaifeng/opt/anaconda3/envs/mlsys_homework/bin/python\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 90 items / 82 deselected / 8 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py::test_nn_linear_weight_init_1 \u001b[32mPASSED\u001b[0m\u001b[32m          [ 12%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_linear_bias_init_1 \u001b[32mPASSED\u001b[0m\u001b[32m            [ 25%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_linear_forward_1 \u001b[32mPASSED\u001b[0m\u001b[32m              [ 37%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_linear_forward_2 \u001b[32mPASSED\u001b[0m\u001b[32m              [ 50%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_linear_forward_3 \u001b[32mPASSED\u001b[0m\u001b[32m              [ 62%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_linear_backward_1 \u001b[32mPASSED\u001b[0m\u001b[32m             [ 75%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_linear_backward_2 \u001b[32mPASSED\u001b[0m\u001b[32m             [ 87%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_linear_backward_3 \u001b[32mPASSED\u001b[0m\u001b[32m             [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m8 passed\u001b[0m, \u001b[33m82 deselected\u001b[0m\u001b[32m in 0.21s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m pytest -v -k \"test_nn_linear\""
+    "!python -m pytest -v -k \"test_nn_linear\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "submit\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 18 items / 17 deselected / 1 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py \n",
+      "Submitting nn_linear...\n",
+      "Grader test 1 passed\n",
+      "Grader test 2 passed\n",
+      "Grader test 3 passed\n",
+      "Grader test 4 passed\n",
+      "Grader test 5 passed\n",
+      "Grader test 6 passed\n",
+      "\u001b[32m.\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m17 deselected\u001b[0m\u001b[32m in 3.62s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_linear\""
+    "!python -m mugrade submit '_Oo1E5jrsROcSyO0QctSs' -k \"nn_linear\""
    ]
   },
   {
@@ -889,7 +983,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -903,7 +997,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
