--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -300,20 +300,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0 -- /Users/huaifeng/opt/anaconda3/envs/mlsys_homework/bin/python\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 90 items / 88 deselected / 2 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py::test_nn_relu_forward_1 \u001b[32mPASSED\u001b[0m\u001b[32m                [ 50%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_relu_backward_1 \u001b[32mPASSED\u001b[0m\u001b[32m               [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m2 passed\u001b[0m, \u001b[33m88 deselected\u001b[0m\u001b[32m in 0.18s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m pytest -v -k \"test_nn_relu\""
+    "!python -m pytest -v -k \"test_nn_relu\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "submit\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 18 items / 17 deselected / 1 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py \n",
+      "Submitting nn_relu...\n",
+      "Grader test 1 passed\n",
+      "Grader test 2 passed\n",
+      "\u001b[32m.\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m17 deselected\u001b[0m\u001b[32m in 1.39s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_relu\""
+    "!python -m mugrade submit '_Oo1E5jrsROcSyO0QctSs' -k \"nn_relu\""
    ]
   },
   {
@@ -336,20 +375,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0 -- /Users/huaifeng/opt/anaconda3/envs/mlsys_homework/bin/python\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 90 items / 88 deselected / 2 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py::test_nn_sequential_forward_1 \u001b[32mPASSED\u001b[0m\u001b[32m          [ 50%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_sequential_backward_1 \u001b[32mPASSED\u001b[0m\u001b[32m         [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m2 passed\u001b[0m, \u001b[33m88 deselected\u001b[0m\u001b[32m in 0.18s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m pytest -v -k \"test_nn_sequential\""
+    "!python -m pytest -v -k \"test_nn_sequential\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "submit\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 18 items / 17 deselected / 1 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py \n",
+      "Submitting nn_sequential...\n",
+      "Grader test 1 passed\n",
+      "Grader test 2 passed\n",
+      "\u001b[32m.\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m17 deselected\u001b[0m\u001b[32m in 1.74s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_sequential\""
+    "!python -m mugrade submit '_Oo1E5jrsROcSyO0QctSs' -k \"nn_sequential\""
    ]
   },
   {
@@ -376,20 +454,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 117,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0 -- /Users/huaifeng/opt/anaconda3/envs/mlsys_homework/bin/python\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 90 items / 85 deselected / 5 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py::test_op_logsumexp_backward_1 \u001b[32mPASSED\u001b[0m\u001b[32m          [ 20%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_op_logsumexp_backward_2 \u001b[32mPASSED\u001b[0m\u001b[32m          [ 40%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_op_logsumexp_backward_3 \u001b[32mPASSED\u001b[0m\u001b[32m          [ 60%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_op_logsumexp_backward_5 \u001b[32mPASSED\u001b[0m\u001b[32m          [ 80%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_op_logsumexp_backward_4 \u001b[32mPASSED\u001b[0m\u001b[32m          [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m5 passed\u001b[0m, \u001b[33m85 deselected\u001b[0m\u001b[32m in 0.17s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m pytest -v -k \"test_op_logsumexp\""
+    "!python -m pytest -v -k \"test_op_logsumexp_backward_\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "submit\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 18 items / 17 deselected / 1 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py \n",
+      "Submitting op_logsumexp...\n",
+      "Grader test 1 passed\n",
+      "Grader test 2 passed\n",
+      "Grader test 3 passed\n",
+      "Grader test 4 passed\n",
+      "Grader test 5 passed\n",
+      "Grader test 6 passed\n",
+      "Grader test 7 passed\n",
+      "Grader test 8 passed\n",
+      "Grader test 9 passed\n",
+      "Grader test 10 passed\n",
+      "\u001b[32m.\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m17 deselected\u001b[0m\u001b[32m in 8.74s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"op_logsumexp\""
+    "!python -m mugrade submit '_Oo1E5jrsROcSyO0QctSs' -k \"op_logsumexp\""
    ]
   },
   {
@@ -415,20 +545,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 143,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0 -- /Users/huaifeng/opt/anaconda3/envs/mlsys_homework/bin/python\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 90 items / 86 deselected / 4 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py::test_nn_softmax_loss_forward_1 \u001b[32mPASSED\u001b[0m\u001b[32m        [ 25%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_softmax_loss_forward_2 \u001b[32mPASSED\u001b[0m\u001b[32m        [ 50%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_softmax_loss_backward_1 \u001b[32mPASSED\u001b[0m\u001b[32m       [ 75%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_softmax_loss_backward_2 \u001b[32mPASSED\u001b[0m\u001b[32m       [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m4 passed\u001b[0m, \u001b[33m86 deselected\u001b[0m\u001b[32m in 0.18s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m pytest -v -k \"test_nn_softmax_loss\""
+    "!python -m pytest -v -k \"test_nn_softmax_loss_\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "submit\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 18 items / 17 deselected / 1 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py \n",
+      "Submitting nn_softmax_loss...\n",
+      "Grader test 1 passed\n",
+      "Grader test 2 passed\n",
+      "Grader test 3 passed\n",
+      "Grader test 4 passed\n",
+      "\u001b[32m.\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m17 deselected\u001b[0m\u001b[32m in 2.55s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_softmax_loss\""
+    "!python -m mugrade submit '_Oo1E5jrsROcSyO0QctSs' -k \"nn_softmax_loss\""
    ]
   },
   {
@@ -460,20 +635,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 155,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0 -- /Users/huaifeng/opt/anaconda3/envs/mlsys_homework/bin/python\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 90 items / 83 deselected / 7 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py::test_nn_layernorm_forward_1 \u001b[32mPASSED\u001b[0m\u001b[32m           [ 14%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_layernorm_forward_2 \u001b[32mPASSED\u001b[0m\u001b[32m           [ 28%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_layernorm_forward_3 \u001b[32mPASSED\u001b[0m\u001b[32m           [ 42%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_layernorm_backward_1 \u001b[32mPASSED\u001b[0m\u001b[32m          [ 57%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_layernorm_backward_2 \u001b[32mPASSED\u001b[0m\u001b[32m          [ 71%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_layernorm_backward_3 \u001b[32mPASSED\u001b[0m\u001b[32m          [ 85%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_nn_layernorm_backward_4 \u001b[32mPASSED\u001b[0m\u001b[32m          [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m7 passed\u001b[0m, \u001b[33m83 deselected\u001b[0m\u001b[32m in 0.16s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m pytest -v -k \"test_nn_layernorm\""
+    "!python -m pytest -v -k \"test_nn_layernorm_\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "submit\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 18 items / 17 deselected / 1 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py \n",
+      "Submitting nn_layernorm...\n",
+      "Grader test 1 passed\n",
+      "Grader test 2 passed\n",
+      "Grader test 3 passed\n"
+     ]
+    }
+   ],
    "source": [
-    "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"nn_layernorm\""
+    "!python -m mugrade submit '_Oo1E5jrsROcSyO0QctSs' -k \"nn_layernorm\""
    ]
   },
   {
