--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "40dde97a",
+   "id": "1c3d9359",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,63 +56,29 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d3c05a36",
+   "id": "ad6058a8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "broadcast_to shape: [2, 2]\n",
-      "i grad: 1.0\n",
-      "div scalar: 0.5\n",
-      "i grad: 0.5\n",
-      "i grad: [0.5 0.5]\n",
-      "EWiseAdd: [0.5 0.5]\n",
-      "i grad: [0.5 0.5]\n",
-      "i grad: [-0.5 -0.5]\n",
-      "summation grad: [[-0.5 -0.5]\n",
-      " [-0.5 -0.5]]\n",
-      "i grad: [[-0.5 -0.5]\n",
-      " [-0.5 -0.5]]\n",
-      "multiply grad: [[ 1.10122275 -0.92466891]\n",
-      " [ 1.10122275 -0.92466891]],[[-0.  -0.5]\n",
-      " [-0.5 -0. ]]\n",
-      "i grad: [[ 1.10122275 -0.92466891]\n",
-      " [ 1.10122275 -0.92466891]]\n",
-      "i grad: [0.5 0.5]\n",
-      "logsumexp grad: [[0.00854702 0.49145299]\n",
-      " [0.00854702 0.49145299]]\n",
-      "i grad: [[ 0.00854702 -0.00854701]\n",
-      " [-0.49145298  0.49145299]]\n",
-      "EWiseAdd: [[ 0.00854702 -0.00854701]\n",
-      " [-0.49145298  0.49145299]]\n",
-      "i grad: [[ 0.00854702 -0.00854701]\n",
-      " [-0.49145298  0.49145299]]\n",
-      "broadcast_to outgrad: [[ 0.00854702 -0.00854701]\n",
-      " [-0.49145298  0.49145299]]\n",
-      "broadcast_to grad: [[-0.48290596]\n",
-      " [ 0.48290598]]\n",
-      "i grad: [[-0.48290596]\n",
-      " [ 0.48290598]]\n",
-      "i grad: [[ 0.00854702 -0.00854701]\n",
-      " [-0.49145298  0.49145299]]\n",
-      "matmul grad: [[-1.39287788e-02  3.22333779e-03  5.71530972e-07]\n",
-      " [ 8.00904579e-01 -1.85341469e-01 -3.35521282e-05]],[[-0.48290596  0.48290598]\n",
-      " [-0.48290596  0.48290598]\n",
-      " [-0.48290596  0.48290598]]\n",
-      "i grad: [[-0.48290596  0.48290598]\n",
-      " [-0.48290596  0.48290598]\n",
-      " [-0.48290596  0.48290598]]\n",
-      "i grad: [[-1.39287788e-02  3.22333779e-03  5.71530972e-07]\n",
-      " [ 8.00904579e-01 -1.85341469e-01 -3.35521282e-05]]\n",
-      "2.043133497238159\n",
+      "ddddddd  bias shape: (1, 2)\n",
+      "ddddddd  broadcast_size shape: [2, 2]\n",
+      "before broadcast: (1, 2)\n",
+      "after broadcast: (1, 2)\n",
+      "before broadcast: ()\n",
+      "after broadcast: ()\n",
+      "before broadcast: (2, 1)\n",
+      "after broadcast: (2, 1)\n",
+      "before broadcast: (2, 1)\n",
+      "after broadcast: (2, 1)\n",
+      "2.0431335\n",
       "1.0\n",
-      "[[-0.48290596  0.48290598]\n",
-      " [-0.48290596  0.48290598]\n",
-      " [-0.48290596  0.48290598]]\n",
-      "[[-0.48290596]\n",
-      " [ 0.48290598]]\n"
+      "[[-0.48290598  0.48290598]\n",
+      " [-0.48290598  0.48290598]\n",
+      " [-0.48290598  0.48290598]]\n",
+      "[[-0.48290598  0.48290598]]\n"
      ]
     }
    ],
@@ -144,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "76813cc2",
+   "id": "d5d2ff99",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "575d371f",
+   "id": "ba29a0ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3814ebe6",
+   "id": "1535d4d0",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7f1b76b7",
+   "id": "80f7eb7c",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e3f5bc25",
+   "id": "6e8569b9",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "92c9d590",
+   "id": "b30e8447",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5e952195",
+   "id": "962c2ee1",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "936c9fcd",
+   "id": "24821c22",
    "metadata": {},
    "outputs": [
     {
@@ -352,8 +318,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "b990b423",
+   "execution_count": 14,
+   "id": "7053d098",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,8 +329,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "b0cc74e8",
+   "execution_count": 15,
+   "id": "1993dd8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,8 +339,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "9bdecdf9",
+   "execution_count": 16,
+   "id": "4d3a9b34",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +349,7 @@
        "[3, 2, 1]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,8 +360,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "16c79752",
+   "execution_count": 17,
+   "id": "7395e579",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +370,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "890837fc",
+   "id": "348f2f73",
    "metadata": {},
    "outputs": [],
    "source": [
