--- a/hw2-wrong.ipynb
+++ b/hw2-wrong.ipynb
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 151,
    "metadata": {
     "scrolled": false
    },
@@ -1161,39 +1161,26 @@
       "cachedir: .pytest_cache\n",
       "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
       "plugins: anyio-3.5.0\n",
-      "collected 90 items / 89 deselected / 1 selected                                \u001b[0m\n",
+      "collected 90 items / 84 deselected / 6 selected                                \u001b[0m\n",
       "\n",
-      "tests/test_nn_and_optim.py::test_optim_sgd_momentum_1 \u001b[31mFAILED\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_optim_sgd_vanilla_1 \u001b[32mPASSED\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_optim_sgd_momentum_1 \u001b[32mPASSED\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_optim_sgd_weight_decay_1 \u001b[32mPASSED\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_optim_sgd_momentum_weight_decay_1 \u001b[32mPASSED\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_optim_sgd_layernorm_residual_1 \u001b[32mPASSED\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_optim_sgd_z_memory_check_1 \u001b[32mPASSED\u001b[0m\n",
       "\n",
-      "=================================== FAILURES ===================================\n",
-      "\u001b[31m\u001b[1m__________________________ test_optim_sgd_momentum_1 ___________________________\u001b[0m\n",
-      "\n",
-      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_optim_sgd_momentum_1\u001b[39;49;00m():\n",
-      ">       np.testing.assert_allclose(learn_model_1d(\u001b[94m64\u001b[39;49;00m, \u001b[94m16\u001b[39;49;00m, \u001b[94mlambda\u001b[39;49;00m z: nn.Sequential(nn.Linear(\u001b[94m64\u001b[39;49;00m, \u001b[94m32\u001b[39;49;00m), nn.ReLU(), nn.Linear(\u001b[94m32\u001b[39;49;00m, \u001b[94m16\u001b[39;49;00m)), ndl.optim.SGD, lr=\u001b[94m0.01\u001b[39;49;00m, momentum=\u001b[94m0.9\u001b[39;49;00m),\n",
-      "            np.array(\u001b[94m3.311805\u001b[39;49;00m), rtol=\u001b[94m1e-5\u001b[39;49;00m, atol=\u001b[94m1e-5\u001b[39;49;00m)\n",
-      "\u001b[1m\u001b[31mE       AssertionError: \u001b[0m\n",
-      "\u001b[1m\u001b[31mE       Not equal to tolerance rtol=1e-05, atol=1e-05\u001b[0m\n",
-      "\u001b[1m\u001b[31mE       \u001b[0m\n",
-      "\u001b[1m\u001b[31mE       Mismatched elements: 1 / 1 (100%)\u001b[0m\n",
-      "\u001b[1m\u001b[31mE       Max absolute difference: 0.4648373\u001b[0m\n",
-      "\u001b[1m\u001b[31mE       Max relative difference: 0.14035769\u001b[0m\n",
-      "\u001b[1m\u001b[31mE        x: array(2.846968, dtype=float32)\u001b[0m\n",
-      "\u001b[1m\u001b[31mE        y: array(3.311805)\u001b[0m\n",
-      "\n",
-      "\u001b[1m\u001b[31mtests/test_nn_and_optim.py\u001b[0m:963: AssertionError\n",
-      "=========================== short test summary info ============================\n",
-      "FAILED tests/test_nn_and_optim.py::test_optim_sgd_momentum_1 - AssertionError: \n",
-      "\u001b[31m======================= \u001b[31m\u001b[1m1 failed\u001b[0m, \u001b[33m89 deselected\u001b[0m\u001b[31m in 0.32s\u001b[0m\u001b[31m =======================\u001b[0m\n"
+      "\u001b[32m======================= \u001b[32m\u001b[1m6 passed\u001b[0m, \u001b[33m84 deselected\u001b[0m\u001b[32m in 0.35s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "!python -m pytest -s -v -k \"test_optim_sgd_momentum_1\""
+    "!python -m pytest -s -v -k \"test_optim_sgd_\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1210,9 +1197,13 @@
       "tests/test_nn_and_optim.py \n",
       "Submitting optim_sgd...\n",
       "Grader test 1 passed\n",
-      "Grader test 2 failed: Failed: incorrect output\n",
+      "Grader test 2 passed\n",
       "Grader test 3 passed\n",
-      "Grader test 4 failed: Failed: incorrect output\n"
+      "Grader test 4 passed\n",
+      "Grader test 5 passed\n",
+      "\u001b[32m.\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m17 deselected\u001b[0m\u001b[32m in 3.53s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
@@ -1255,11 +1246,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 162,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0 -- /Users/huaifeng/opt/anaconda3/envs/mlsys_homework/bin/python\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 90 items / 89 deselected / 1 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py::test_optim_adam_batchnorm_eval_mode_1 \u001b[31mFAILED\u001b[0m\u001b[31m [100%]\u001b[0m\n",
+      "\n",
+      "=================================== FAILURES ===================================\n",
+      "\u001b[31m\u001b[1m____________________ test_optim_adam_batchnorm_eval_mode_1 _____________________\u001b[0m\n",
+      "\n",
+      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_optim_adam_batchnorm_eval_mode_1\u001b[39;49;00m():\n",
+      ">       np.testing.assert_allclose(learn_model_1d_eval(\u001b[94m64\u001b[39;49;00m, \u001b[94m16\u001b[39;49;00m, \u001b[94mlambda\u001b[39;49;00m z: nn.Sequential(nn.Linear(\u001b[94m64\u001b[39;49;00m, \u001b[94m32\u001b[39;49;00m), nn.ReLU(), nn.BatchNorm1d(\u001b[94m32\u001b[39;49;00m), nn.Linear(\u001b[94m32\u001b[39;49;00m, \u001b[94m16\u001b[39;49;00m)), ndl.optim.Adam, lr=\u001b[94m0.001\u001b[39;49;00m, weight_decay=\u001b[94m0.001\u001b[39;49;00m),\n",
+      "            np.array(\u001b[94m3.192054\u001b[39;49;00m, dtype=np.float32), rtol=\u001b[94m1e-5\u001b[39;49;00m, atol=\u001b[94m1e-5\u001b[39;49;00m)\n",
+      "\u001b[1m\u001b[31mE       AssertionError: \u001b[0m\n",
+      "\u001b[1m\u001b[31mE       Not equal to tolerance rtol=1e-05, atol=1e-05\u001b[0m\n",
+      "\u001b[1m\u001b[31mE       \u001b[0m\n",
+      "\u001b[1m\u001b[31mE       Mismatched elements: 1 / 1 (100%)\u001b[0m\n",
+      "\u001b[1m\u001b[31mE       Max absolute difference: 0.07797551\u001b[0m\n",
+      "\u001b[1m\u001b[31mE       Max relative difference: 0.024428\u001b[0m\n",
+      "\u001b[1m\u001b[31mE        x: array(3.114079, dtype=float32)\u001b[0m\n",
+      "\u001b[1m\u001b[31mE        y: array(3.192054, dtype=float32)\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31mtests/test_nn_and_optim.py\u001b[0m:1006: AssertionError\n",
+      "=========================== short test summary info ============================\n",
+      "FAILED tests/test_nn_and_optim.py::test_optim_adam_batchnorm_eval_mode_1 - As...\n",
+      "\u001b[31m======================= \u001b[31m\u001b[1m1 failed\u001b[0m, \u001b[33m89 deselected\u001b[0m\u001b[31m in 0.31s\u001b[0m\u001b[31m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m pytest -v -k \"test_optim_adam\""
+    "!python -m pytest -v -k \"test_optim_adam_batchnorm_eval_mode_1\""
    ]
   },
   {
