--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -403,8 +403,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "012ddea7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=np.array([\n",
+    "    [1,2],\n",
+    "    [3,4]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "8d5367ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b=np.zeros([4,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c3d50e08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b[1:-1,1:-1]=a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "12b21012",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4., 0.],\n",
+       "       [0., 0.]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[2:,2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2e3acd1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0.],\n",
+       "       [0., 1., 2., 0.],\n",
+       "       [0., 3., 4., 0.],\n",
+       "       [0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[:6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2337796e",
    "metadata": {},
    "outputs": [],
    "source": []
