--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8d5367ea",
+   "id": "c3f82807",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c3d50e08",
+   "id": "77798190",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "12b21012",
+   "id": "1e8246a6",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2e3acd1e",
+   "id": "a616fa35",
    "metadata": {},
    "outputs": [
     {
@@ -482,8 +482,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "id": "4b7fd272",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([0, 1, 2]), array([3, 4, 5]), array([6, 7, 8]), array([ 9, 10])]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array_split(np.arange(11),range(3, 10, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2337796e",
+   "id": "18918d29",
    "metadata": {},
    "outputs": [],
    "source": []
