--- a/hw2-wrong.ipynb
+++ b/hw2-wrong.ipynb
@@ -1003,20 +1003,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 100,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0 -- /Users/huaifeng/opt/anaconda3/envs/mlsys_homework/bin/python\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 90 items / 88 deselected / 2 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_data.py::test_dataloader_mnist \u001b[32mPASSED\u001b[0m\u001b[32m                         [ 50%]\u001b[0m\n",
+      "tests/test_data.py::test_dataloader_ndarray \u001b[32mPASSED\u001b[0m\u001b[32m                       [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m2 passed\u001b[0m, \u001b[33m88 deselected\u001b[0m\u001b[32m in 9.62s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m pytest -v -k \"test_dataloader\""
+    "!python -m pytest -v -k \"test_dataloader\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "submit\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 18 items / 17 deselected / 1 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_data.py \n",
+      "Submitting dataloader...\n",
+      "Grader test 1 passed\n",
+      "Grader test 2 passed\n",
+      "Grader test 3 passed\n",
+      "Grader test 4 passed\n",
+      "Grader test 5 passed\n",
+      "\u001b[32m.\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m17 deselected\u001b[0m\u001b[32m in 3.99s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"dataloader\""
+    "!python -m mugrade submit '_Oo1E5jrsROcSyO0QctSs' -k \"dataloader\""
    ]
   },
   {
