--- a/hw2-wrong.ipynb
+++ b/hw2-wrong.ipynb
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 115,
    "metadata": {
     "scrolled": false
    },
@@ -488,7 +488,7 @@
       "tests/test_nn_and_optim.py::test_nn_batchnorm_running_var_1 \u001b[32mPASSED\u001b[0m\u001b[32m       [ 87%]\u001b[0m\n",
       "tests/test_nn_and_optim.py::test_nn_batchnorm_running_grad_1 \u001b[32mPASSED\u001b[0m\u001b[32m      [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m8 passed\u001b[0m, \u001b[33m82 deselected\u001b[0m\u001b[32m in 0.17s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001b[32m======================= \u001b[32m\u001b[1m8 passed\u001b[0m, \u001b[33m82 deselected\u001b[0m\u001b[32m in 0.19s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
       "Grader test 9 passed\n",
       "\u001b[32m.\u001b[0m\n",
       "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m17 deselected\u001b[0m\u001b[32m in 4.56s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m17 deselected\u001b[0m\u001b[32m in 5.27s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
@@ -1139,20 +1139,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 182,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0 -- /Users/huaifeng/opt/anaconda3/envs/mlsys_homework/bin/python\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 90 items / 80 deselected / 10 selected                               \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py::test_mlp_residual_block_num_params_1 \u001b[32mPASSED\u001b[0m\u001b[32m  [ 10%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_mlp_residual_block_num_params_2 \u001b[32mPASSED\u001b[0m\u001b[32m  [ 20%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_mlp_residual_block_forward_1 \u001b[32mPASSED\u001b[0m\u001b[32m     [ 30%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_mlp_resnet_num_params_1 \u001b[32mPASSED\u001b[0m\u001b[32m          [ 40%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_mlp_resnet_num_params_2 \u001b[32mPASSED\u001b[0m\u001b[32m          [ 50%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_mlp_resnet_forward_1 \u001b[32mPASSED\u001b[0m\u001b[32m             [ 60%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_mlp_resnet_forward_2 \u001b[32mPASSED\u001b[0m\u001b[32m             [ 70%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_mlp_train_epoch_1 \u001b[32mPASSED\u001b[0m\u001b[32m                [ 80%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_mlp_eval_epoch_1 \u001b[32mPASSED\u001b[0m\u001b[32m                 [ 90%]\u001b[0m\n",
+      "tests/test_nn_and_optim.py::test_mlp_train_mnist_1 \u001b[32mPASSED\u001b[0m\u001b[32m                [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m====================== \u001b[32m\u001b[1m10 passed\u001b[0m, \u001b[33m80 deselected\u001b[0m\u001b[32m in 17.15s\u001b[0m\u001b[32m ======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python3 -m pytest -v -k \"test_mlp\""
+    "!python -m pytest -v -k \"test_mlp\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 184,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "submit\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.8.13, pytest-7.1.3, pluggy-1.0.0\n",
+      "rootdir: /Users/huaifeng/Projects/mlsys/hw2\n",
+      "plugins: anyio-3.5.0\n",
+      "collected 18 items / 17 deselected / 1 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_nn_and_optim.py \n",
+      "Submitting mlp_resnet...\n",
+      "Grader test 1 passed\n",
+      "Grader test 2 passed\n",
+      "Grader test 3 passed\n",
+      "Grader test 4 passed\n",
+      "Grader test 5 passed\n",
+      "Grader test 6 passed\n",
+      "Grader test 7 passed\n",
+      "Grader test 8 passed\n",
+      "Grader test 9 passed\n",
+      "Grader test 10 passed\n",
+      "\u001b[32m.\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m17 deselected\u001b[0m\u001b[32m in 9.86s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "!python -m mugrade submit 'YOUR_GRADER_KEY_HERE' -k \"mlp_resnet\""
+    "!python -m mugrade submit '_Oo1E5jrsROcSyO0QctSs' -k \"mlp_resnet\""
    ]
   },
   {
