--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c3f82807",
+   "id": "ed1ad9d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "77798190",
+   "id": "be6577eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1e8246a6",
+   "id": "cebebe43",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a616fa35",
+   "id": "288f0974",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4b7fd272",
+   "id": "bf8f19dc",
    "metadata": {},
    "outputs": [
     {
@@ -503,8 +503,106 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "id": "2463d66a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "4e0904a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.reshape(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5dbc6aab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=np.array(\n",
+    "[\n",
+    "    [1,2,3,4,2],\n",
+    "    [2,3,6,2,1]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "ba8b706e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c=np.argmax(a,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "e829a32c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b=np.array([1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "ffb1760f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b!=c"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "18918d29",
+   "id": "7797075f",
    "metadata": {},
    "outputs": [],
    "source": []
